Matpellerin/sc 1802/pastanaga2 in desktop (#122)
* Allow to load JSON as module

+ update README documenting how to run desktop app

* Add desktop environment to .gitignore

* Update desktop prefix to be nde

Follow the prefix convention: n for nuclia followed by the first two letters of the app name

* Fix ESlint error: event emitter should not start by "on"

* Pastanaga 2 + sistema integration

* Remove stf variables

* Replace stf components by pastanaga ones

except for the progress as we don't have progress in pastanaga yet

* Revert "Add desktop environment to .gitignore"

This reverts commit 9440d7d2aeed42e3f1539c29d294f4dfeb435705.

* No need for -c local-stage serving desktop app

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -1,26 +1,26 @@
 <div class="connectors-list"
      *ngIf="!fields">
-  <da-connector *ngFor="let connector of connectors"
+  <nde-connector *ngFor="let connector of connectors"
                 [title]="connector.title"
                 [logo]="connector.logo"
                 [description]="connector.description"
-                (click)="selectConnector(connector.id)"></da-connector>
+                (click)="onSelectConnector(connector.id)"></nde-connector>
 </div>
 <form *ngIf="!!fields && !!form"
       [formGroup]="form"
+      qa="fields-form"
       (ngSubmit)="validate()">
   <div *ngFor="let field of fields">
-    <label>{{ field.label }}
-      <stf-input *ngIf="field.type === 'text'"
-                 [formControlName]="field.id"></stf-input>
-      <select stfSelect
-              [formControlName]="field.id"
-              *ngIf="field.type === 'select'">
-        <option *ngFor="let option of field.options"
-                [value]="option.value">{{ option.label }}</option>
-      </select>
-    </label>
+    <pa-input *ngIf="field.type === 'text'"
+              [formControlName]="field.id">{{ field.label }}</pa-input>
+
+    <pa-select *ngIf="field.type === 'select'"
+               [formControlName]="field.id"
+               [label]="field.label">
+      <pa-option *ngFor="let option of field.options"
+                 [value]="option.value">{{ option.label }}</pa-option>
+    </pa-select>
   </div>
-  <stf-button (click)="validate()"
-              qa="validate">Upload</stf-button>
+
+  <pa-button qa="validate" type="submit" kind="primary">Upload</pa-button>
 </form>
