--- a/apps/app/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -13,11 +13,11 @@
       </div>
     </div>
   </div>
-  <div *ngIf="isAdmin | async"
-       fxLayout="row"
+  <div fxLayout="row"
        fxLayoutGap="30px"
        fxLayoutAlign="start start">
-    <div class="left-column"
+    <div *ngIf="isAccountManager | async"
+         class="left-column"
          fxFlex="1 1 auto">
       <div class="container chart-container search-stats">
         <div class="search-stats-header"
@@ -41,7 +41,8 @@
 
     </div>
 
-    <div class="right-column"
+    <div *ngIf="isKbAdmin | async"
+         class="right-column"
          fxFlex="0 0 auto">
       <div class="container state-container">
         <div>
