call training endpoints

--- a/apps/app/src/app/knowledge-box/knowledge-box-manage/knowledge-box-manage.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-manage/knowledge-box-manage.component.html
@@ -1,4 +1,6 @@
-<stf-section-navbar [title]="'stash.settings'" [routes]="routes" [hasInnerRoutes]="true">
+<stf-section-navbar [title]="'stash.settings'"
+                    [routes]="routes | async"
+                    [hasInnerRoutes]="true">
   <stf-section-navbar-body class="knowledge-box-manage">
     <router-outlet></router-outlet>
   </stf-section-navbar-body>
