--- a/apps/app/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -8,8 +8,12 @@
     <p>{{'stash.settings.processes.training.info' | translate}}</p>
 
     <div class="checkbox-container">
-      <stf-checkbox [(selected)]="intent" color="dark">Intent</stf-checkbox>
-      <stf-checkbox [(selected)]="labels" color="dark">Labels</stf-checkbox>
+      <stf-checkbox [(selected)]="intent"
+                    [disabled]="cannotTrain | async"
+                    color="dark">Intent</stf-checkbox>
+      <stf-checkbox [(selected)]="labels"
+                    [disabled]="cannotTrain | async"
+                    color="dark">Labels</stf-checkbox>
     </div>
 
     <p *ngIf="intent || labels"
@@ -18,14 +22,19 @@
     </p>
 
     <div class="agreement-container">
-      <stf-checkbox [(selected)]="agreement" color="dark">{{'stash.settings.processes.training.agreement' | translate}}</stf-checkbox>
+      <stf-checkbox [(selected)]="agreement"
+                    [disabled]="cannotTrain | async"
+                    color="dark">{{'stash.settings.processes.training.agreement' | translate}}</stf-checkbox>
     </div>
 
+    <div *ngIf="cannotTrain | async"
+         class="warning">{{ 'stash.settings.processes.training.not-allowed' | translate}}</div>
     <div class="cta-container">
       <stf-button minWidth="110px"
                   [color]="training ? 'secondary' : 'primary'"
-                  [disabled]="(!intent || !labels) && !agreement"
-                  (click)="startOrStopTraining()">{{('stash.settings.processes.training.' + (training ? 'stop' : 'start')) | translate}}</stf-button>
+                  [disabled]="((!intent || !labels) && !agreement) || (cannotTrain | async)"
+                  (click)="startOrStopTraining()">{{('stash.settings.processes.training.' + (training ? 'stop' :
+        'start')) | translate}}</stf-button>
       <div *ngIf="training"
            class="active-training warning">
         {{'stash.settings.processes.training.active' | translate}}
